Fix - not all items in mobile hamburger menu were visible

--- a/app/routes/components/Header.module.css
+++ b/app/routes/components/Header.module.css
@@ -60,13 +60,13 @@
   .navigation ul {
     display: none;
     background-color: #f5f5f5;
-    height: 30vh;
-    width: 20vw;
+    height: auto;  /* Changed from 30vh */
+    width: 100%;   /* Changed from 20vw */
     position: fixed;
     padding-top: 20px;
     right: 0;
-    text-align: left;
-    padding-left: 20px;
+    text-align: center; /* Changed from left */
+    padding-left: 0;    /* Changed from 20px */
   }
 
   .navigation ul li {
@@ -78,12 +78,29 @@
     display: block;
   }
 
-  .navigationOpen ul {
-    display: inline;
+  .navigationOpen {
+    height: auto;
+    min-height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-
+  
   .navigationOpen ul {
-    display: inline;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .navigationOpen li {
+    width: 100%;
+    text-align: center;
   }
 
   .hamburger {
